# cw-ip-215_stellaris-mods-translator

./: .gitignore  CMakeLists.txt  Makefile  README.md  StellarisMT.drawio  main.cpp  translations.db
.github/workflows/: build.yml  c-cpp.yml
docs/: tech-requirement.md
lib/curl-8.1.0_1-win64-mingw/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
oop/: StellarisMT.drawio  database.hpp  localisator.cpp  localisator.hpp  main.cpp  mod.cpp  mod.hpp  parser.cpp  parser.hpp  translator.cpp  translator.hpp
site/: closing.php  heading.php  index.php
src/: database.cpp  database.hpp  fileLocalise.cpp  fileLocalise.hpp  interface.cpp  interface.hpp  localisator.cpp  localisator.hpp  log.cpp  log.hpp  logging.cpp  main.cpp  mod.cpp  mod.hpp  parser.cpp  parser.hpp  path.hpp  paths.hpp  translate  translate.cpp  translate.hpp  translator.cpp  translator.hpp
test/: fileLocalise.cpp  log.cpp  main.cpp  parser.cpp  test_catch.cpp
test/localiseTests/: auto_l_russian.yml  autor_l_russian.yml  test_l_english.yml
test/testMod/localisation/: test_l_english.yml
